# tessera

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: seedGraph.json
scripts/: analyzeSemantic.ts  buildSeedGraph.ts  classifyDimensions.ts  embedNode.ts  reclassifyDimensions.ts  validateSeed.ts
src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ai/: embeddings.ts  llm.ts  prompts.ts  vec.test.ts  vec.ts  webllm.ts
src/research/: archive.ts  bakedVideos.ts  chronicling.ts  classify.test.ts  classify.ts  crossref.ts  disambiguate.ts  expand.ts  gnews.ts  guardian.ts  hn.ts  lang.ts  net.ts  nyt.ts  openalex.ts  openlibrary.ts  providers.ts  scholar.ts  seeds.ts  wiki.ts  wikipage.ts  wiktionary.ts  youtube.ts
src/state/: graphStore.test.ts  graphStore.ts  idb.ts  quantize.test.ts  quantize.ts  session.ts  storage.ts
src/ui/: AlexandriaBackground.tsx  CardView.tsx  ConceptStrip.tsx  DevPanel.tsx  DownloadAppButton.tsx  FeedPane.tsx  FluidBackground.tsx  GraphScreen.tsx  ModelToggle.tsx  NotesPane.tsx  OnboardingScreen.tsx  QueryScreen.tsx  ReachSelector.tsx  SessionScreen.tsx  SettingsScreen.tsx  SourceConverge.tsx  Tabs.tsx  TerminalBackground.tsx  ThemeBackground.tsx  TimelineView.tsx  WeaveBackground.tsx  WeaveMap.tsx  Whiteboard.tsx  external.ts  labels.ts  platform.ts  styles.css
src/weave/: bandit.ts  checks.ts  chronology.test.ts  chronology.ts  depth.ts  (+9 more)
